exports[`test renders the Firm component 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <FirmLight
    globalRating={4.5}
    globalRatingCount={88}
    imageUrl="http://res.cloudinary.com/quotatis/image/upload/v1495120789/GB/ChatbotImages/Q1/experts-and-advices-before-work.jpg"
    logoUrl=""
    name="test"
    postalCode="96352" />,
  "nodes": Array [
    <FirmLight
      globalRating={4.5}
      globalRatingCount={88}
      imageUrl="http://res.cloudinary.com/quotatis/image/upload/v1495120789/GB/ChatbotImages/Q1/experts-and-advices-before-work.jpg"
      logoUrl=""
      name="test"
      postalCode="96352" />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Firm
        globalRating={4.5}
        globalRatingCount={88}
        logoUrl=""
        name="test"
        postalCode="96352" />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "globalRating": 4.5,
          "globalRatingCount": 88,
          "logoUrl": "",
          "name": "test",
          "postalCode": "96352",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <FirmLight
          globalRating={4.5}
          globalRatingCount={88}
          imageUrl="http://res.cloudinary.com/quotatis/image/upload/v1495120789/GB/ChatbotImages/Q1/experts-and-advices-before-work.jpg"
          logoUrl=""
          name="test"
          postalCode="96352" />,
        "_debugID": 2,
        "_renderedOutput": <FirmLight
          globalRating={4.5}
          globalRatingCount={88}
          imageUrl="http://res.cloudinary.com/quotatis/image/upload/v1495120789/GB/ChatbotImages/Q1/experts-and-advices-before-work.jpg"
          logoUrl=""
          name="test"
          postalCode="96352" />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Firm
    globalRating={4.5}
    globalRatingCount={88}
    logoUrl=""
    name="test"
    postalCode="96352" />,
}
`;

exports[`test renders the Firm component full 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <FirmFull
    globalRating={4.5}
    globalRatingCount={88}
    logoUrl=""
    name="test"
    postalCode="96352" />,
  "nodes": Array [
    <FirmFull
      globalRating={4.5}
      globalRatingCount={88}
      logoUrl=""
      name="test"
      postalCode="96352" />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Firm
        full={true}
        globalRating={4.5}
        globalRatingCount={88}
        logoUrl=""
        name="test"
        postalCode="96352" />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "full": true,
          "globalRating": 4.5,
          "globalRatingCount": 88,
          "logoUrl": "",
          "name": "test",
          "postalCode": "96352",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <FirmFull
          globalRating={4.5}
          globalRatingCount={88}
          logoUrl=""
          name="test"
          postalCode="96352" />,
        "_debugID": 4,
        "_renderedOutput": <FirmFull
          globalRating={4.5}
          globalRatingCount={88}
          logoUrl=""
          name="test"
          postalCode="96352" />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Firm
    full={true}
    globalRating={4.5}
    globalRatingCount={88}
    logoUrl=""
    name="test"
    postalCode="96352" />,
}
`;
